--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1133,6 +1133,22 @@ a {
 .cid-siprYVAxSV img {
   width: 100%;
 }
+.cid-sipwFWVGmo {
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sipwFWVGmo .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sipwFWVGmo .row {
+  flex-direction: row-reverse;
+}
+.cid-sipwFWVGmo img {
+  width: 100%;
+}
 .cid-s48P1Icc8J {
   padding-top: 2rem;
   padding-bottom: 2rem;
