--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1085,6 +1085,22 @@ a {
 .cid-sipoDVxb0i img {
   width: 100%;
 }
+.cid-siql7f4XHp {
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-siql7f4XHp .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-siql7f4XHp .row {
+  flex-direction: row-reverse;
+}
+.cid-siql7f4XHp img {
+  width: 100%;
+}
 .cid-siprXu1dxR {
   padding-top: 2rem;
   padding-bottom: 5rem;
@@ -1099,6 +1115,22 @@ a {
   flex-direction: row-reverse;
 }
 .cid-siprXu1dxR img {
+  width: 100%;
+}
+.cid-siqoHCdHSP {
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-siqoHCdHSP .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-siqoHCdHSP .row {
+  flex-direction: row-reverse;
+}
+.cid-siqoHCdHSP img {
   width: 100%;
 }
 .cid-siprXNdWIj {
