--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -691,8 +691,6 @@ a {
 .cid-sipohFMJMG {
   z-index: 1000;
   width: 100%;
-  position: relative;
-  min-height: 60px;
 }
 .cid-sipohFMJMG nav.navbar {
   position: fixed;
@@ -792,8 +790,8 @@ a {
   min-height: 70px;
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #bbbbbb;
+  position: absolute;
+  background: rgba(187, 187, 187, 0.2);
 }
 .cid-sipohFMJMG .navbar.opened {
   transition: all 0.3s;
@@ -1041,7 +1039,7 @@ a {
   }
 }
 .cid-s48MCQYojq {
-  background-image: url("../../../assets/images/background7.jpg");
+  background-color: #00b898;
 }
 .cid-s48MCQYojq .mbr-section-title {
   text-align: center;
